<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="hint_login">Enter login</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="sign_in">Sing In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="recycler_view_example">This is RecyclerView example</string>
</resources>
